# dynamodb_wrapper

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
dynamodb_wrapper/: __init__.py
dynamodb_wrapper/config/: config.py
dynamodb_wrapper/exceptions/: base.py
dynamodb_wrapper/repositories/: pipeline_config.py  pipeline_run_logs.py  table_config.py
dynamodb_wrapper/utils/: __init__.py
dynamodb_wrapper_V1/: ARCHITECTURE_V1.md  README_V1.md  __init__.py  pyproject.toml
dynamodb_wrapper_V1/dynamodb_wrapper/config/: __init__.py
dynamodb_wrapper_V1/dynamodb_wrapper/exceptions/: __init__.py  connection.py  item_not_found.py  validation.py
dynamodb_wrapper_V1/dynamodb_wrapper/models/: __init__.py  pipeline_config.py  pipeline_run_log.py  table_config.py
dynamodb_wrapper_V1/dynamodb_wrapper/repositories/: __init__.py  base.py
dynamodb_wrapper_V1/dynamodb_wrapper/utils/: pyspark_integration.py
dynamodb_wrapper_V1/examples/: __init__.py  basic_usage.py  pyspark_usage.py  timezone_usage.py
dynamodb_wrapper_V1/tests/: __init__.py  conftest.py
dynamodb_wrapper_V1/tests/unit/: test_base_repository.py  test_concrete_repositories.py  test_config.py  test_models.py  test_timezone.py
dynamodb_wrapper_V2/: ARCHITECTURE.md  CLAUDE.md  PROPOSAL.md  README.md  README_V2.md  TEST_ANALYSIS.md  __init__.py  docker-compose.localstack.yml  pyproject.toml
dynamodb_wrapper_V2/dynamodb_wrapper/: __init__.py  utils.py
dynamodb_wrapper_V2/dynamodb_wrapper/config/: config.py
dynamodb_wrapper_V2/dynamodb_wrapper/core/: __init__.py  table_gateway.py
dynamodb_wrapper_V2/dynamodb_wrapper/exceptions/: __init__.py  domain_exceptions.py
dynamodb_wrapper_V2/dynamodb_wrapper/handlers/: __init__.py
dynamodb_wrapper_V2/dynamodb_wrapper/handlers/pipeline_config/: __init__.py  commands.py  queries.py
dynamodb_wrapper_V2/dynamodb_wrapper/handlers/pipeline_run_logs/: __init__.py  commands.py  queries.py
dynamodb_wrapper_V2/dynamodb_wrapper/handlers/table_config/: __init__.py  commands.py  queries.py
dynamodb_wrapper_V2/dynamodb_wrapper/models/: __init__.py  base.py  domain_models.py  dtos.py  views.py
dynamodb_wrapper_V2/dynamodb_wrapper/utils/: timezone.py
dynamodb_wrapper_V2/examples/: basic_usage.py  pyspark_usage.py  timezone_usage.py
dynamodb_wrapper_V2/scripts/: localstack_simple.py  run_localstack_tests.py
dynamodb_wrapper_V2/tests/: conftest.py
dynamodb_wrapper_V2/tests/helpers/: __init__.py  timezone_assertions.py
dynamodb_wrapper_V2/tests/integration/: README.md  __init__.py  test_cqrs_operations.py  test_localstack_integration.py
dynamodb_wrapper_V2/tests/unit/: test_base_repository.py  test_batch_operations.py  test_concrete_repositories.py  test_concurrent_updates.py  test_config.py  test_error_mapping_comprehensive.py  test_model_driven_keys.py  test_models.py  test_pipeline_config.py  test_pipeline_run_logs.py  test_table_config.py  test_table_gateway.py  test_timezone.py  test_timezone_manager.py  test_transaction_atomicity.py  test_type_mapping_edge_cases.py
examples/: basic_usage.py  pyspark_usage.py  timezone_usage.py
tests/: conftest.py
tests/unit/: __init__.py  test_base_repository.py  test_concrete_repositories.py  test_config.py  test_models.py  test_timezone.py
